--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,49 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Bước 1: Checkout mã nguồn
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Bước 2: Cài đặt JDK 21
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
 
+      # Bước 3: Cài đặt các dependencies cần thiết
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y maven
+        run: |
+          sudo apt update
+          sudo apt install -y maven wget curl unzip
 
+      # Bước 4: Cài đặt phiên bản Google Chrome cụ thể
+      - name: Install specific Google Chrome version
+        run: |
+          # Thay phiên bản dưới đây thành phiên bản Chrome bạn muốn
+          CHROME_VERSION="131.0.6778.86"
+          
+          # Tải về gói cài đặt Chrome với phiên bản cụ thể
+          wget https://dl.google.com/linux/direct/google-chrome-stable_${CHROME_VERSION}_amd64.deb
+          sudo dpkg -i google-chrome-stable_${CHROME_VERSION}_amd64.deb
+          sudo apt --fix-broken install -y
+
+      # Bước 5: Cài đặt ChromeDriver tương thích với phiên bản Chrome
+      - name: Install ChromeDriver
+        run: |
+          # Lấy phiên bản của Chrome đang được cài đặt
+          CHROME_VERSION=$(google-chrome-stable --version | awk '{print $3}' | cut -d '.' -f1,2)
+
+          # Cập nhật phiên bản ChromeDriver tương ứng
+          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
+          echo "Installing ChromeDriver version: $CHROMEDRIVER_VERSION"
+
+          # Tải và giải nén ChromeDriver
+          wget https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+
+      # Bước 6: Chạy các bài kiểm tra Selenium
       - name: Run Selenium Tests
         run: mvn clean test
