--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: Selenium Test Automation
-
 on:
   push:
     branches:
@@ -7,11 +6,9 @@ on:
   pull_request:
     branches:
       - main
-
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       # Bước 1: Checkout mã nguồn
       - name: Checkout code
@@ -30,33 +27,42 @@ jobs:
           sudo apt update
           sudo apt install -y maven wget curl unzip
 
-      # Bước 4: Cài đặt phiên bản Google Chrome cụ thể
-      - name: Install specific Google Chrome version
+      # Bước 4: Cài đặt phiên bản Google Chrome mới nhất
+      - name: Install latest Google Chrome
         run: |
-          # Thay phiên bản dưới đây thành phiên bản Chrome bạn muốn
-          CHROME_VERSION="131.0.6778.86"
-          
-          # Tải về gói cài đặt Chrome với phiên bản cụ thể
-          wget https://dl.google.com/linux/direct/google-chrome-stable_${CHROME_VERSION}_amd64.deb
-          
-          # Cài đặt gói chrome
-          sudo dpkg -i google-chrome-stable_${CHROME_VERSION}_amd64.deb || sudo apt --fix-broken install -y
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          sudo apt --fix-broken install -y
 
-      # Bước 5: Cài đặt ChromeDriver tương thích với phiên bản Chrome
+      # Bước 5: Kiểm tra Chrome đã được cài đặt thành công
+      - name: Verify Chrome installation
+        run: |
+          google-chrome-stable --version || (echo "Chrome installation failed" && exit 1)
+
+      # Bước 6: Cài đặt ChromeDriver tương thích
       - name: Install ChromeDriver
         run: |
-          # Lấy phiên bản của Chrome đang được cài đặt
           CHROME_VERSION=$(google-chrome-stable --version | awk '{print $3}' | cut -d '.' -f1,2)
-
-          # Cập nhật phiên bản ChromeDriver tương ứng
-          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
+          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION" || echo "Not Found")
+          if [ "$CHROMEDRIVER_VERSION" == "Not Found" ]; then
+            echo "ChromeDriver for Chrome version $CHROME_VERSION is not available."
+            exit 1
+          fi
           echo "Installing ChromeDriver version: $CHROMEDRIVER_VERSION"
-
-          # Tải và giải nén ChromeDriver
           wget https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/
+          chmod +x /usr/local/bin/chromedriver
 
-      # Bước 6: Chạy các bài kiểm tra Selenium
+      # Bước 7: Cache Maven dependencies
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      # Bước 8: Chạy các bài kiểm tra Selenium
       - name: Run Selenium Tests
         run: mvn clean test
