--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 "*.mp4 filter=lfs diff=lfs merge=lfs -text" 
 "*.zip filter=lfs diff=lfs merge=lfs -text"  
 "*.pdffilter=lfs diff=lfs merge=lfs -text"  
+*.zip filter=lfs diff=lfs merge=lfs -text
